--- a/forms/src/app/app.component.html
+++ b/forms/src/app/app.component.html
@@ -27,8 +27,8 @@
 
 <h2>Login From - Reactive - Grouping Controls</h2>
 <form [formGroup]="loginForm" (ngSubmit)="login()">
-  <p><input type="text" formControlName="username" /></p>
-  <p><input type="text" formControlName="password" /></p>
+  <p><input type="text" formControlName="username" name="username" /></p>
+  <p><input type="text" formControlName="password" name="password" /></p>
   <p>Username: {{ loginForm.value.username }}</p>
   <p>Password: {{ loginForm.value.password }}</p>
   <p><input type="submit" name="Submit" [disabled]="!loginForm.valid" /></p>
