--- a/mat-table/src/app/table/table.component.scss
+++ b/mat-table/src/app/table/table.component.scss
@@ -17,6 +17,7 @@
 /* Table styling */
 .mat-table {
   width: 100%;
+  border-spacing: 0;
 }
 
 /* Cell content styling */
@@ -29,13 +30,46 @@
   max-width: 300px; /* Maximum column width before ellipsis */
 }
 
-/* Sticky first column */
-// .mat-mdc-header-cell:first-child,
-// .mat-mdc-cell:first-child {
-.cdk-column-id {
-  position: sticky; /* inexpensive selector */
-  left: 0;
+/* Sticky actions column */
+.mat-column-actions {
+  position: sticky;
   z-index: 1;
+  left: 0;
+  min-width: 85px; // Bigger than natural width
+  padding: 0;
+  
+  &::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 1px;
+    background: rgba(0, 0, 0, 0.12);
+  }
+}
+
+/* Sticky first data column (id) */
+.mat-column-id {
+  position: sticky;
+  z-index: 1;
+  left: 85px; // Match actions column width
+  padding: 0;
+  
+  &::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 1px;
+    background: rgba(0, 0, 0, 0.12);
+  }
+}
+
+.sticky-cell {
+  margin: 0px 8px;
+  text-align: center;
 }
 
 .mat-mdc-header-row {
