--- a/user-reporting-app/src/app/edit-form/edit-form.component.scss
+++ b/user-reporting-app/src/app/edit-form/edit-form.component.scss
@@ -90,17 +90,14 @@ h5 {
   border-left: 2px solid #ccc;
 }
 
-.add-button-container.top {
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: flex-end;
-}
-
 .sub-group-header {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
   margin: 20px 0;
+  gap: 1em;
+}
+
+.sub-group-header-gap {
+  flex: 1 1 auto;
 }
 
 mat-chip-set {
@@ -120,3 +117,39 @@ h6 {
   margin-top: 0;
   margin-bottom: 0;
 }
+
+.bulk-edit-form {
+  // Override filled container color only on dirty form fields
+  mat-form-field.ng-dirty {
+    --mdc-outlined-text-field-outline-color: orange;
+    --mdc-outlined-text-field-outline-width: 3px;
+    --mdc-outlined-text-field-hover-outline-color: orange;
+  }
+}
+
+::ng-deep .mat-mdc-form-field-has-icon-suffix div.mat-mdc-text-field-wrapper {
+  padding-right: 16px;
+}
+
+button[appClearField] {
+  display: none;
+}
+
+button[appResetField] {
+  display: none;
+}
+
+.bulk-edit-form {
+  button[appClearField] {
+    display: unset;
+  }
+
+  button[appResetField] {
+    display: unset;
+  }
+
+  ::ng-deep .mat-mdc-form-field-has-icon-suffix div.mat-mdc-text-field-wrapper {
+    padding-right: unset;
+  }
+}
+
