--- a/user-reporting-app/src/app/edit-form/edit-form.component.scss
+++ b/user-reporting-app/src/app/edit-form/edit-form.component.scss
@@ -1,65 +1,7 @@
 @use "@angular/material" as mat;
 
-.user-form-container {
-  padding: 20px;
-  max-width: 1200px;
-  margin: 0 auto;
+.form-field-density {
   @include mat.form-field-density(-4);
-}
-
-.tab-content {
-  padding: 20px 0;
-}
-
-.form-row {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  margin: 20px 0;
-}
-
-.form-row mat-form-field {
-  flex: 1;
-  min-width: 200px;
-}
-
-.full-width {
-  width: 100%;
-}
-
-.form-actions {
-  margin-top: 24px;
-  display: flex;
-  gap: 16px;
-  justify-content: flex-end;
-}
-
-mat-expansion-panel {
-  margin-bottom: 16px;
-}
-
-mat-panel-title {
-  gap: 16px;
-}
-
-mat-expansion-panel-header .mdc-fab {
-  box-shadow: none;
-}
-
-mat-divider {
-  margin: 24px 0;
-}
-
-h3,
-h4,
-h5 {
-  margin-top: 24px;
-  margin-bottom: 16px;
-  color: rgba(0, 0, 0, 0.87);
-}
-
-::ng-deep .mat-mdc-tab-body-content {
-  scrollbar-width: none;
 }
 
 .overlay-pre {
@@ -76,46 +18,6 @@ h5 {
   // pointer-events: none;
   // overflow: auto;
   // scrollbar-width: none;
-}
-
-.form-section {
-  padding: 1rem;
-  border: 1px solid #eee;
-  border-radius: 4px;
-  margin: 1rem 0;
-}
-
-.nested-array {
-  padding-left: 1.5rem;
-  border-left: 2px solid #ccc;
-}
-
-.sub-group-header {
-  display: flex;
-  margin: 20px 0;
-  gap: 1em;
-}
-
-.sub-group-header-gap {
-  flex: 1 1 auto;
-}
-
-mat-chip-set {
-  margin: 20px 0;
-}
-
-::ng-deep .sub-absolute > .mat-mdc-form-field-subscript-wrapper {
-  position: absolute;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .bulk-edit-form {
@@ -153,3 +55,13 @@ button[appResetField] {
   }
 }
 
+.container.form-field-density mat-toolbar {
+  --mat-toolbar-container-background-color: var(
+    --mat-sys-surface-container-low
+  );
+}
+
+mat-panel-title h1,
+mat-panel-title h3 {
+  margin-bottom: 0;
+}
