--- a/user-reporting-app/src/app/table/table.component.scss
+++ b/user-reporting-app/src/app/table/table.component.scss
@@ -21,6 +21,12 @@ mat-drawer-content {
 /* Container for horizontal scrolling */
 .table-container {
   overflow-y: auto; /* Table scrolls internally */
+  flex: 1 1 auto;
+  @include mat.theme(
+    (
+      density: -2,
+    )
+  );
 }
 
 /* Table styling */
@@ -173,10 +179,6 @@ mat-toolbar-row {
   gap: 0.5em;
 }
 
-.toolbarrow-spacer {
-  flex: 1 1 auto;
-}
-
 .mat-column-select {
   text-align: center;
 }
@@ -199,6 +201,13 @@ mat-toolbar-row {
   height: 100dvh;
 }
 
-.table-container {
+mat-chip-set.mat-mdc-chip-set.mdc-evolution-chip-set.filter-chips {
+  overflow-x: auto;
+  overflow-y: hidden;
+  scrollbar-width: thin;
   flex: 1 1 auto;
+}
+
+.table-filter-container mat-toolbar-row.mat-toolbar-row {
+  justify-content: end;
 }
