--- a/user-reporting-app/src/styles.scss
+++ b/user-reporting-app/src/styles.scss
@@ -5,10 +5,14 @@ html {
     (
       color: mat.$rose-palette,
       typography: Roboto,
-      density: -2,
     )
   );
 }
+
+// Include Angular Material core styles and typography
+// @include mat.core();
+$my-typography: mat.m2-define-typography-config();
+@include mat.typography-hierarchy($my-typography);
 
 .mat-warn {
   @include mat.icon-overrides(
