--- a/user-reporting-app/src/styles.scss
+++ b/user-reporting-app/src/styles.scss
@@ -14,12 +14,56 @@ html {
 $my-typography: mat.m2-define-typography-config();
 @include mat.typography-hierarchy($my-typography);
 
+.mat-success {
+  @include mat.icon-overrides(
+    (
+      color: #4caf50,
+    )
+  );
+}
+
+.mat-info {
+  @include mat.icon-overrides(
+    (
+      color: #2196f3,
+    )
+  );
+}
+
+.mat-warning {
+  @include mat.icon-overrides(
+    (
+      color: #ff9800,
+    )
+  );
+}
+
+.mat-disabled {
+  @include mat.icon-overrides(
+    (
+      color: #9e9e9e,
+    )
+  );
+}
+
 .mat-warn {
   @include mat.icon-overrides(
     (
       color: #f44336,
     )
   );
+}
+
+.mat-error {
+  @include mat.icon-overrides(
+    (
+      color: var(--mat-sys-error),
+    )
+  );
+}
+
+mat-toolbar {
+  --mat-toolbar-standard-height: 64px;
 }
 
 html,
