--- a/user-reporting-app/src/app/edit-form/edit-form.component.scss
+++ b/user-reporting-app/src/app/edit-form/edit-form.component.scss
@@ -20,14 +20,14 @@
   // scrollbar-width: none;
 }
 
-.bulk-edit-form {
-  // Override filled container color only on dirty form fields
-  mat-form-field.ng-dirty {
-    --mdc-outlined-text-field-outline-color: orange;
-    --mdc-outlined-text-field-outline-width: 3px;
-    --mdc-outlined-text-field-hover-outline-color: orange;
-  }
-}
+// .bulk-edit-form {
+//   // Override filled container color only on dirty form fields
+//   mat-form-field.ng-dirty {
+//     --mdc-outlined-text-field-outline-color: orange;
+//     --mdc-outlined-text-field-outline-width: 3px;
+//     --mdc-outlined-text-field-hover-outline-color: orange;
+//   }
+// }
 
 ::ng-deep .mat-mdc-form-field-has-icon-suffix div.mat-mdc-text-field-wrapper {
   padding-right: 16px;
@@ -37,7 +37,7 @@ button[appClearField] {
   display: none;
 }
 
-button[appResetField] {
+button[appToggleEditField] {
   display: none;
 }
 
@@ -46,7 +46,7 @@ button[appResetField] {
     display: unset;
   }
 
-  button[appResetField] {
+  button[appToggleEditField] {
     display: unset;
   }
 
