--- a/user-reporting-app/src/app/edit-form/edit-form-template/edit-form-template.component.scss
+++ b/user-reporting-app/src/app/edit-form/edit-form-template/edit-form-template.component.scss
@@ -65,3 +65,31 @@ mat-panel-title h1,
 mat-panel-title h3 {
   margin-bottom: 0;
 }
+
+.edit-form .row {
+  margin-bottom: 0.5rem;
+}
+
+// mat-expansion-panel-header {
+//     margin-bottom: 1em;
+// }
+
+.edit-form mat-card-header {
+  height: 64px;
+  padding: 0 24px;
+}
+
+::ng-deep .edit-form mat-card-header .mat-mdc-card-header-text {
+  display: flex;
+  align-items: center;
+}
+
+.error-icon {
+  display: none;
+  position: absolute;
+  right: -1.5em;
+}
+
+.error-icon-show {
+  display: inline;
+}
