--- a/user-reporting-app/src/app/app.component.scss
+++ b/user-reporting-app/src/app/app.component.scss
@@ -5,6 +5,7 @@ mat-sidenav-container {
     (
       container-background-color: var(--mat-sys-surface-container),
       container-text-color: var(--mat-sys-on-surface),
+      container-divider-color: rgba(0, 0, 0, 0.12),
     )
   );
 }
@@ -14,7 +15,7 @@ mat-sidenav {
 }
 
 .nav {
-  border-right: 1px solid var(--mat-sys-outline-variant);
+  // border-right: 1px solid var(--mat-sys-outline-variant);
   /* Local density for buttons if desired */
   @include mat.button-density(-1);
 
