--- a/user-reporting-app/src/app/reporting-ui/reporting-ui-table/reporting-ui-table.component.scss
+++ b/user-reporting-app/src/app/reporting-ui/reporting-ui-table/reporting-ui-table.component.scss
@@ -41,25 +41,25 @@
   }
 }
 
-// .sticky-cell.mat-column-_hiddenValidation {
-//   position: sticky;
-//   z-index: 999 !important;
-//   left: 125px; // Match actions + select column width
-//   padding: 0;
+.sticky-cell.mat-column-_hiddenValidation {
+  position: sticky;
+  z-index: 999 !important;
+  left: 145px; // Match select + actions column width
+  padding: 0;
 
-//   &::after {
-//     content: "";
-//     position: absolute;
-//     right: 0;
-//     top: 0;
-//     bottom: 0;
-//     width: var(--mat-table-row-item-outline-width, 1px);
-//     background: var(
-//       --mat-table-row-item-outline-color,
-//       var(--mat-sys-outline, rgba(0, 0, 0, 0.12))
-//     );
-//   }
-// }
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   right: 0;
+  //   top: 0;
+  //   bottom: 0;
+  //   width: var(--mat-table-row-item-outline-width, 1px);
+  //   background: var(
+  //     --mat-table-row-item-outline-color,
+  //     var(--mat-sys-outline, rgba(0, 0, 0, 0.12))
+  //   );
+  // }
+}
 
 .mat-column-_hiddenValidation span {
   display: inline-flex;
@@ -73,12 +73,18 @@
   font-size: 15px;
   font-family: var(--mat-sys-body-medium-font, Roboto, sans-serif);
   user-select: none;
-  margin-right: 4px; /* spacing between circles */
 }
 
 .sticky-cell > div {
   margin: 0px 8px;
   text-align: center;
+}
+
+td.mat-column-_hiddenValidation > div {
+  white-space: nowrap;
+  display: flex;
+  justify-content: center;
+  gap: 0.3em;
 }
 
 .sticky-cell button {
