--- a/user-reporting-app/src/styles.scss
+++ b/user-reporting-app/src/styles.scss
@@ -190,3 +190,7 @@ html {
 .mat-mdc-option.mdc-list-item {
   min-height: 40px;
 }
+
+.upload-stepper-dialog {
+  --mat-dialog-container-max-width: 920px;
+}
