chore: configure ESLint and Prettier with custom import rules
- Replace Biome with ESLint, Prettier, and Angular-specific linting plugins
- Add `.prettierrc` configuration to ensure source code is properly formatted and linted
- Implement `no-restricted-imports` rule to enforce lazy loading for the `manual-upload-stepper` component (prevents eager loading of heavy deps like `xlsx`)
- Update `angular.json` and `package.json` with new linting builders and scripts

--- a/user-reporting-app/src/app/transaction-search/transaction-search.component.scss
+++ b/user-reporting-app/src/app/transaction-search/transaction-search.component.scss
@@ -1,5 +1,5 @@
-@use "@angular/material" as mat;
-@use "../typography-scaling" as typo;
+@use '@angular/material' as mat;
+@use '../typography-scaling' as typo;
 
 .transaction-search {
   @include mat.all-component-densities(-5);
