--- a/user-reporting-app/src/app/reporting-ui/reporting-ui-table/reporting-ui-table.component.scss
+++ b/user-reporting-app/src/app/reporting-ui/reporting-ui-table/reporting-ui-table.component.scss
@@ -7,7 +7,7 @@
   text-align: center;
 
   &::after {
-    content: "";
+    content: '';
     position: absolute;
     right: 0;
     top: 0;
@@ -28,7 +28,7 @@
   padding: 0;
 
   &::after {
-    content: "";
+    content: '';
     position: absolute;
     right: 0;
     top: 0;
