feat(test): add audit view, add/update edit form tests
- update app routes to include audit path and specific resolvers for bulk and single edits
- add tests to verify add and remove buttons behavior in edit form component
- add test cases to ensure no extra form fields are created
- add css styles for disabled inputs in audit view
- refactor base table component to use new angular for loop syntax and remove unused track by methods

--- a/user-reporting-app/src/app/reporting-ui/edit-form/edit-form.component.scss
+++ b/user-reporting-app/src/app/reporting-ui/edit-form/edit-form.component.scss
@@ -68,6 +68,29 @@ button[appToggleEditField] {
   }
 }
 
+::ng-deep .audit-form {
+  --mdc-outlined-text-field-disabled-label-text-color: var(
+    --mat-sys-on-surface-variant
+  );
+  --mdc-outlined-text-field-disabled-input-text-color: var(
+    --mat-sys-on-surface
+  );
+  --mat-select-disabled-trigger-text-color: var(--mat-sys-on-surface);
+  --mat-checkbox-disabled-label-color: var(--mat-sys-on-surface);
+
+  --mdc-outlined-text-field-disabled-outline-color: var(--mat-sys-outline);
+
+  --mdc-checkbox-disabled-selected-icon-color: var(--mat-sys-primary);
+
+  .mdc-text-field--disabled {
+    user-select: text;
+  }
+
+  .mat-mdc-select-disabled .mat-mdc-select-trigger {
+    user-select: text;
+  }
+}
+
 mat-panel-title h1,
 mat-panel-title h3 {
   margin-bottom: 0;
