--- a/user-reporting-app/src/app/transaction-view/wires-table/wires-table.component.scss
+++ b/user-reporting-app/src/app/transaction-view/wires-table/wires-table.component.scss
@@ -24,3 +24,33 @@
   margin: 0px 8px;
   text-align: center;
 }
+
+::ng-deep .mat-column-msgTag50 > div {
+  white-space: pre-line;
+  word-wrap: break-word;
+}
+
+::ng-deep .mat-column-msgTag59 > div {
+  white-space: pre-line;
+  word-wrap: break-word;
+}
+
+::ng-deep .mat-column-swiftTag52OrderingInstitution > div {
+  white-space: pre-line;
+  word-wrap: break-word;
+}
+
+::ng-deep .mat-column-msgTag70 > div {
+  white-space: pre-line;
+  word-wrap: break-word;
+}
+
+::ng-deep .mat-column-payeeAddress > div {
+  white-space: pre-line;
+  word-wrap: break-word;
+}
+
+::ng-deep .mat-column-payerAddress > div {
+  white-space: pre-line;
+  word-wrap: break-word;
+}
