--- a/user-reporting-app/src/app/reporting-ui/reporting-ui-table/reporting-ui-table.component.scss
+++ b/user-reporting-app/src/app/reporting-ui/reporting-ui-table/reporting-ui-table.component.scss
@@ -1,44 +1,6 @@
-.sticky-cell.mat-column-select {
-  position: sticky;
-  z-index: 999 !important;
-  left: 0;
-  min-width: 60px; // bigger than natural width
-  padding: 0;
-  text-align: center;
-
-  &::after {
-    content: '';
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    width: var(--mat-table-row-item-outline-width, 1px);
-    background: var(
-      --mat-table-row-item-outline-color,
-      var(--mat-sys-outline, rgba(0, 0, 0, 0.12))
-    );
-  }
-}
-
-.sticky-cell.mat-column-actions {
-  position: sticky;
-  z-index: 999 !important;
-  left: 60px;
-  min-width: 85px; // Bigger than natural width
-  padding: 0;
-
-  &::after {
-    content: '';
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    width: var(--mat-table-row-item-outline-width, 1px);
-    background: var(
-      --mat-table-row-item-outline-color,
-      var(--mat-sys-outline, rgba(0, 0, 0, 0.12))
-    );
-  }
+.mat-column-actions > div {
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .sticky-cell > div {
