--- a/user-reporting-app/src/styles.scss
+++ b/user-reporting-app/src/styles.scss
@@ -194,3 +194,15 @@ html {
 .upload-stepper-dialog {
   --mat-dialog-container-max-width: 920px;
 }
+
+.h-400 {
+  height: 400px;
+}
+
+.h-500 {
+  height: 500px;
+}
+
+.h-800 {
+  height: 800px; /* Ensure explicit height for ECharts */
+}
