--- a/user-reporting-app/src/app/base-table/base-table.component.scss
+++ b/user-reporting-app/src/app/base-table/base-table.component.scss
@@ -76,10 +76,11 @@ mat-drawer-container {
     color: var(--mat-sys-on-surface-variant, #666);
   }
 
-  & {
-    --mat-sidenav-container-elevation-shadow: 0px 0px 15px 0px
-      rgba(0, 0, 0, 0.25);
-  }
+  @include mat.sidenav-overrides(
+    (
+      container-width: 380px,
+    )
+  );
 }
 
 ::ng-deep mat-drawer-container mat-chip-row.mat-mdc-chip.mat-mdc-chip-row {
